# Corewar

./: CMakeLists.txt  Makefile  c.sh  corewar  corewar.h  ft_add.c  ft_and.c  ft_or.c  ft_sti.c  ft_sub.c  ft_xor.c  inform.txt  test.cor
corewar_vlad_26.02/corewar_25_02/: corewar  test.cor  test.s
corewar_vlad_26.02/corewar_25_02/corewar_src/: Makefile  ft_get_cod.c  ft_get_set_num.c  ft_zjmp.c  perform_carriages.c
corewar_vlad_26.02/corewar_25_02/includes/: corewar.h
include/: corewar.h  op.h
libft/: ft_atoi.c  ft_strsplit.c  ft_strtrim.c  libft.h
src/: 123.c  bot_size.c  curses.c  error.c  ft_add.c  ft_aff.c  ft_and.c  ft_fork.c  ft_ld.c  ft_ldi.c  ft_lfork.c  ft_live.c  ft_lld.c  ft_lldi.c  ft_or.c  ft_st.c  ft_sti.c  ft_sub.c  ft_xor.c  ft_zjmp.c  function_check.c  main.c  op.c  save_bot.c  shift_bit.c
